--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "compression": "^1.7.3",
     "express": "^4.16.3",
     "next": "^6.1.1",
