Docker Traefik image up-to-date version to avoid Yarn upgrade notice

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "3000"
 
   traefik:
-    image: traefik
+    image: traefik:$TRAEFIK_TAG
     restart: unless-stopped
     command: -c /dev/null --web --docker --logLevel=INFO
     ports:
