--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -3,8 +3,11 @@
   "version": "1.1.0",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "compression": "^1.7.3",
     "express": "^4.16.3",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "next-redux-saga": "^3.0.0-beta.1",
     "next-redux-wrapper": "^2.0.0",
@@ -12,6 +15,7 @@
     "node-sass-glob-importer": "^5.2.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
+    "random-words": "^1.1.0",
     "raw-loader": "^0.5.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
